Trabajo terminado menos la parte de servicios

--- a/assets/html/nosotros.html
+++ b/assets/html/nosotros.html
@@ -26,7 +26,7 @@
                     <a class="prin" href="#">Nosotros</a>
                     <a href="Adopta.html">Adopta</a>
                     <a href="#">Colabora</a>
-                    <a href="#">Servicios</a>
+                    <a class="bloqueada" href="#">Servicios</a>
                     <a href="#">Contáctanos</a>
                 </nav>
                 
