--- a/assets/html/servicios.html
+++ b/assets/html/servicios.html
@@ -24,16 +24,16 @@
                   
                     <a href="../../index.html">Inicio</a>
                     <a href="#">Nosotros</a>
-                    <a href="#">Adopta</a>
-                    <a href="#">Colabora</a>
-                    <a class="prin" href="#">Servicios</a>
-                    <a href="#">Contáctanos</a>
+                    <a href="Adopta.html">Adopta</a>
+                    <a href="colabora.html">Colabora</a>
+                    <a class="prin" href="servicios.html">Servicios</a>
+                    <a href="contactanos.html">Contáctanos</a>
                 </nav>
                 
             </header>
 
             <div class="titulo">
-                <h1>Nosotros</h1>
+                <h1>Servicios</h1>
             </div>
             <div class="articulos pag2">
             </div>
