--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <a class="prin" href="index.html">Inicio</a>
                     <a href="assets/html/nosotros.html">Nosotros</a>
                     <a href="assets/html/Adopta.html">Adopta</a>
-                    <a href="#">Colabora</a>
-                    <a href="#">Servicios</a>
-                    <a href="#">Contáctanos</a>
+                    <a href="assets/html/colabora.html">Colabora</a>
+                    <a class="bloqueada" href="#">Servicios</a>
+                    <a href="assets/html/contactanos.html">Contáctanos</a>
                 </nav>
                 
             </header>
